CSS: clear margin to fix jumping scrollbar

--- a/documentation/generation/css/layout.css
+++ b/documentation/generation/css/layout.css
@@ -16,6 +16,7 @@ body {
 }
 html, body {
 	height: 100%;
+	margin: 0;
 }
 h1{font-size:16px;}
 h2{font-size:14px;}
